--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,9 @@
-box: cmfatih/phantomjs
+box: wercker/default
 build:
   steps:
+      - install-packages:
+          packages: npm
+      - npm-install
       - screenshot "file:///Users/mwhooker/dev/step-screenshot":
           url: https://www.google.com
           filename: google.png
