--- a/step.yml
+++ b/step.yml
@@ -7,15 +7,15 @@ properties:
 - name: url
   type: string
   required: true
-- name: file_path
+- name: filename
   type: string
-  required: true
-- name: create_file_in_artifacts
-  type: boolean
-  required: false  
+  required: true  
 - name: viewport_width
   type: string
   required: false
 - name: viewport_height
   type: string
-  required: false  
+  required: false
+- name: create_file_in_artifacts
+  type: boolean
+  required: false    
